Use median time instead of average

--- a/summing.html
+++ b/summing.html
@@ -5,9 +5,28 @@
 
         var number1 = 0, number2 = 0;
         var rightAnswers = 0, wrongAnswers = 0, rightAnswersPercent = 0; 
-        var thinkingTime = 0, thinkingTimeAverage = 0;
+        var thinkingTime = 0, thinkingTimeMedian = 0;
         var thinkingStart = null, thinkingEnd = null;
         var thinkingTimes = [];
+
+        function median(values) {
+
+            values.sort(function (a, b) {
+                return a - b;
+            });
+
+            if (values.length === 0) return 0
+
+            var half = Math.floor(values.length / 2);
+
+            if (values.length % 2) {
+                return values[half];
+            }
+            else {
+                return (values[half - 1] + values[half]) / 2.0;
+            }
+
+        }
 
         function isNumberPressed(event) {
             if (event.keyCode >= 48 && event.keyCode <= 57) {
@@ -41,15 +60,6 @@
             $("#" + id).css('display', 'none');
         }
 
-        function getThinkingTimeAverage() {
-            sum = 0;
-            count = thinkingTimes.length;
-            for (r = 0; r < count; r++) {
-                sum += thinkingTimes[r];
-            }
-            return sum / count;
-        }
-
         function recountStats(result) {
             if (result) {
                 rightAnswers++;
@@ -63,7 +73,7 @@
             thinkingEnd = new Date();
             thinkingTime = (thinkingEnd - thinkingStart) / 1000;
             thinkingTimes.push(thinkingTime);
-            thinkingTimeAverage = getThinkingTimeAverage();
+            thinkingTimeMedian = median(thinkingTimes);
 
         }
 
@@ -71,7 +81,7 @@
             $("#rightAnswers").text(rightAnswers);
             $("#wrongAnswers").text(wrongAnswers);
             $("#rightAnswersPercent").text(rightAnswersPercent.toFixed(0));
-            $("#thinkingTime").text(thinkingTimeAverage.toFixed(2));
+            $("#thinkingTime").text(thinkingTimeMedian.toFixed(2));
         }
 
         function displayNewTask() {
