Tweak for better iPhone support

--- a/summing.html
+++ b/summing.html
@@ -17,7 +17,7 @@
         <div id="main-container">
             <div id="task">
                 <span id="number1"></span> + <span id="number2"></span> 
-                = <input id="answer" onkeypress="return parseAnswerPress(event);" maxlength="3">
+                = <input id="answer" type="number" onkeypress="return parseAnswerPress(event);" maxlength="3">
             </div>
             <p>
                 <img src="img/happy_cat.png" id="happyCat">
