--- a/multiplication.html
+++ b/multiplication.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.js" integrity="sha256-fNXJFIlca05BIO2Y5zh1xrShK3ME+/lYZ0j+ChxX2DA=" crossorigin="anonymous"></script>
+    <script src="multiplication.js"></script>
     <script src="main.js"></script>
 
     <link rel="stylesheet" href="main.css">
@@ -16,7 +17,7 @@
         </div>
         <div id="main-container">
             <div id="task">
-                <span id="number1"></span> + <span id="number2"></span> 
+                <span id="number1"></span> &times; <span id="number2"></span> 
                 = <input id="answer" type="number" onkeypress="return parseAnswerPress(event);" maxlength="3">
             </div>
             <p>
