--- a/addition.html
+++ b/addition.html
@@ -17,12 +17,12 @@
         </div>
         <div id="main-container">
             <div id="task">
-                <span id="number1"></span> + <span id="number2"></span> 
+                <span id="number1"></span> + <span id="number2"></span>
                 = <input id="answer" type="number" onkeypress="return parseAnswerPress(event);" maxlength="3">
             </div>
             <p>
                 <img src="img/happy_cat.png" id="happyCat">
-                <img src="img/shoked_cat.jpg" id="shokedCat">
+                <img src="img/shocked_cat_1.jpg" id="shockedCat">
             </p>
         </div>
     </body>
