--- a/multiplication.html
+++ b/multiplication.html
@@ -20,10 +20,10 @@
                 <span id="number1"></span> &times; <span id="number2"></span>
                 = <input id="answer" type="number" onkeypress="return parseAnswerPress(event);" maxlength="3">
             </div>
-            <p>
-                <img src="img/happy_cat.png" id="happyCat">
+            <div id="result">
+                <img src="img/happy_cat_1.png" id="happyCat">
                 <img src="img/shocked_cat_1.jpg" id="shockedCat">
-            </p>
+            </div>
         </div>
     </body>
 </html>
